// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordField > renders with type password by default 1`] = `
<div>
  <div
    class="relative"
    data-test-id="pw"
  >
    <div
      aria-hidden="false"
      class="inline-flex items-center bg-transparent rounded-small transition-colors border rounded-small h-3 w-full focus-within:ring-1 focus-within:ring-neutral-1000 pr-3"
    >
      <input
        class="flex-1 bg-transparent outline-none placeholder:text-neutral-600 text-neutral-1000 py-0_75 px-1"
        placeholder="Password"
        type="password"
      />
    </div>
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="h-3 w-3 absolute right-0 top-1/2 -translate-y-1/2 inline-flex items-center justify-center text-neutral-1000 hover:text-neutral-600 focus:outline-none focus:ring-1 focus:ring-neutral-1000 cursor-pointer"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye-off w-1_5 h-1_5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
        />
        <path
          d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
        />
        <path
          d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
        />
        <path
          d="m2 2 20 20"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PasswordField > toggles to text when clicking the toggle button and updates aria-label 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-hidden="false"
      class="inline-flex items-center bg-transparent rounded-small transition-colors border rounded-small h-3 w-full focus-within:ring-1 focus-within:ring-neutral-1000 pr-3"
    >
      <input
        class="flex-1 bg-transparent outline-none placeholder:text-neutral-600 text-neutral-1000 py-0_75 px-1"
        placeholder="Password"
        type="text"
      />
    </div>
    <button
      aria-label="Hide password"
      aria-pressed="true"
      class="h-3 w-3 absolute right-0 top-1/2 -translate-y-1/2 inline-flex items-center justify-center text-neutral-1000 hover:text-neutral-600 focus:outline-none focus:ring-1 focus:ring-neutral-1000 cursor-pointer"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye w-1_5 h-1_5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </div>
</div>
`;
